        VDRW <name> (sends Wake on lan to VDR with name <name>, if MAC is configured)
- update channel list in live/running VDR (in channel configuration, needs vdr-plugin-jonglisto)
- visibility of favourites in VDR OSD can be configured for each VDR
- possibility to bypass login and use the Username defined as URL parameter (needs configuration in security.ini and jonglisto-ng.xml)

0.1.0:
Bugfixes:
- accidentally use only german locale, now other (english currently exists) languages are working.
- create channels.conf

New:
- new optional dependency: vdr plugin osdserver (see http://www.udo-richter.de/vdr/osdserver.html)
- show favourite channel list of jonglisto-ng in VDR OSD (needs osdserver plugin)
    - shows the different lists
    - shows program on channel
    - shows epg information
    - set timer, alarm or switch channel
- epg alarm message using osdserver implemented
- configurable time before or after event start to fire the alarm job
- URL parameter 'locale=de' or 'locale=en' are supported to choose another locale (other language files currently do not exists). Normally the browser locale is used.
- optional dependency to vdr plugin jonglisto (https://github.com/Zabrimus/vdr-plugin-jonglisto) to get extended epg information and images.
- new optional configuration elememt <scraper></scraper> which could be set, if extended EPG information and/or images shall be shown.
- scraper images and informations can be displayed (needs vdr-plugin-jonglisto)
- channel switch in channel configuration (it's easier to sort channels, if the channel can be switched on VDR)
- replaced TwinColSelect in favourite configuration with an own component. TwinColSelect has too many disadvantages.
- show deleted recordings (needs vdr-plugin-jonglisto)
- undelete recording (needs vdr-plugin-jonglisto)

0.0.3:
Bugfixes:
- exception in channel configuration, if no channel groups are defined