@@ -8,7 +8,7 @@ At the end of this page you can find some screenshots of the currently existing 
 * EPG view with configurable columns (using regular expressions), search repeatings, add Timer and more
 * possibibilty to define several channel favourites and to use them in the epg view
 * edit EPG entries
-* manage timers (create, delete, move, ...)
+* manage timers (create, delete, move, ...), also remote timers if VDR is configured accordingly
 * manage recordings (rename, delete, move recordings and whole directories via drag and drop, create new folders, ...)
 * manage epgd search timers, if the epgd database is configured (optional)
 * manage epgsearch search timers, if epgsearch plugin is installed on the selected VDR instance (optional)
